--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       content="Welcome To World's Best Digital Education System"
     />
     <meta name="author" content="Soumwadeep Guha" />
+    <!-- Bootstrap 5.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <title>EduSys</title>
   </head>
   <body>
