Added Links To Footer

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,16 @@
     />
     <meta name="author" content="Soumwadeep Guha" />
     <!-- Bootstrap 5.2 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome Icon -->
-    <script src="https://kit.fontawesome.com/85dfc92668.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/85dfc92668.js"
+      crossorigin="anonymous"
+    ></script>
     <title>EduSys</title>
   </head>
   <body>
