Added Login Page

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome To World's Best Digital Education System"
+      content="Welcome To India's Best Digital Education System"
     />
     <meta name="author" content="Soumwadeep Guha" />
     <!-- Bootstrap 5.2 -->
