Centrally Alligned Images

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Welcome To India's Best Digital Education System"
     />
+    <meta
+      name="keywords"
+      content="EduSys,Byjus,Aakash,Allen,Smart Class,Recorder Videos,Notes,Books,Cheap,Free,Online,Offline,India"
+    />
     <meta name="author" content="Soumwadeep Guha" />
     <!-- Bootstrap 5.2 -->
     <link
