--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,19 @@
       content="EduSys,Byjus,Aakash,Allen,Smart Class,Recorder Videos,Notes,Books,Cheap,Free,Online,Offline,India"
     />
     <meta name="author" content="Soumwadeep Guha" />
+
     <!-- Bootstrap 5.2 -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Font Awesome Icon -->
-    <script
-      src="https://kit.fontawesome.com/85dfc92668.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="./fontawesome6_2/css/fontawesome.css" rel="stylesheet" />
+    <link href="./fontawesome6_2/css/brands.css" rel="stylesheet" />
+    <link href="./fontawesome6_2/css/solid.css" rel="stylesheet" />
+
     <title>EduSys</title>
   </head>
   <body>
