Added Info,MainBar Font Size,Translator

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <link href="./fontawesome6_2/css/fontawesome.css" rel="stylesheet" />
     <link href="./fontawesome6_2/css/brands.css" rel="stylesheet" />
     <link href="./fontawesome6_2/css/solid.css" rel="stylesheet" />
+    <!-- Google Translator -->
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <title>EduSys</title>
   </head>
   <body>
