--- a/ScientificCalculator/index.html
+++ b/ScientificCalculator/index.html
@@ -86,8 +86,8 @@
                     <script>var w=window;if(w.performance||w.mozPerformance||w.msPerformance||w.webkitPerformance){var d=document;AKSB=w.AKSB||{},AKSB.q=AKSB.q||[],AKSB.mark=AKSB.mark||function(e,_){AKSB.q.push(["mark",e,_||(new Date).getTime()])},AKSB.measure=AKSB.measure||function(e,_,t){AKSB.q.push(["measure",e,_,t||(new Date).getTime()])},AKSB.done=AKSB.done||function(e){AKSB.q.push(["done",e])},AKSB.mark("firstbyte",(new Date).getTime()),AKSB.prof={custid:"1049920",ustr:"",originlat:"0",clientrtt:"43",ghostip:"23.212.253.78",ipv6:false,pct:"10",clientip:"103.112.106.5",requestid:"1e86d5b6",region:"37486",protocol:"",blver:14,akM:"a",akN:"ae",akTT:"O",akTX:"1",akTI:"1e86d5b6",ai:"285754",ra:"false",pmgn:"",pmgi:"",pmp:"",qc:""},function(e){var _=d.createElement("script");_.async="async",_.src=e;var t=d.getElementsByTagName("script"),t=t[t.length-1];t.parentNode.insertBefore(_,t)}(("https:"===d.location.protocol?"https:":"http:")+"//ds-aksb-a.akamaihd.net/aksb.min.js")}</script>
                     </head>
 <!--<body class="unselectable" oncontextmenu="return false;" onselect="return false;" ondragstart="return false;" onmousewheel="return false;">-->
-<body>
-	<center style="margin-top: 10%;">
+<body style="width: 100%;">
+	<center>
 		<div id="keyPad" class="ui-widget-content calc_container">
     <!-- new Help changes -->
     <div id="helptopDiv">
